@@ -1,3 +1,11 @@
+2008-02-15  Inge Wallin  <inge@lysator.liu.se>
+
+	New class ViewportParams that will be used in the new
+	AbstractProjection
+	* src/lib/ViewportParams.h: New file
+	* src/lib/ViewportParams.cpp: New file
+	* src/lib/CMakeLists.txt: Include the new files
+
 2008-02-13  Carlos Licea  <carlos.licea@kdemail.net>
     Added the Mercator Projection to the placemarks.
     *src/lib/PlaceMarkPainter.cpp: added Mercator to the switch.
